--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -31,13 +31,19 @@
   <div class="card-body">
     <div class="row text-center">
         <div class="col-md-4">
+          {% if request.user == restaurant.owner or request.user.is_staff %}
             <a href="{% url 'restaurant-update' restaurant.id %}" class="btn btn-outline-primary btn-block">Update</a>
+          {% endif %}
         </div>
         <div class="col-md-4">
+          {% if request.user.is_staff %}
             <a href="{% url 'restaurant-delete' restaurant.id %}" class="btn btn-outline-danger btn-block">Delete</a>
+          {% endif %}
         </div>
         <div class="col-md-4">
+          {% if request.user == restaurant.owner or restaurant_obj.owner or request.user.is_staff %}
             <a href="{% url 'item-create' restaurant.id %}" class="btn btn-outline-success btn-block">Add Item</a>
+          {% endif %}
         </div>
     </div>
   </div>
