--- a/restaurants/templates/item_create.html
+++ b/restaurants/templates/item_create.html
@@ -13,7 +13,9 @@
         <form action="{% url 'item-create' restaurant.id %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{form|crispy}}
+            {{% if request.user.is_staff or restaurant_obj.owner == request.user %}:
             <input type="submit" value="Create" class="btn btn-outline-success">
+            {% endif %}
         </form>
     </p>
   </div>
