--- a/restaurants/templates/update.html
+++ b/restaurants/templates/update.html
@@ -12,7 +12,9 @@
         <form action="{% url 'restaurant-update' restaurant_obj.id %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{form|crispy}}
-            <input type="submit" value="Update" class="btn btn-outline-primary">
+            {% if request.user.is_staff or restaurant_obj.owner == request.user %}:
+               <input type="submit" value="Update" class="btn btn-outline-primary">
+            {% endif %}
         </form>
     </p>
   </div>
